--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -2,18 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "11111111111111111111111111111111111111111111111111111111111111111111111111111111 # 80 characters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +72,8 @@
     "        self.n_unsuccessful_files = 0\n",
     "\n",
     "    def create_cluster_output_dir(self):\n",
+    "        \"\"\"Creates the folder which all the results will be saved to based on\n",
+    "        the output_parent_dir and the cluster job name and an incremented number\"\"\"\n",
     "        subdirs = [name for name in os.listdir(self.output_parent_dir) if \n",
     "                   os.path.isdir(os.path.join(self.output_parent_dir, name))]\n",
     "        existing_results_dir = []\n",
@@ -97,12 +88,14 @@
     "        os.makedirs(self.cluster_output_dir)\n",
     "                \n",
     "    def create_logger(self, logger_name, log_file):\n",
+    "        \"\"\"Create logger objects\"\"\"\n",
     "        l = logging.getLogger(logger_name)\n",
     "        fileHandler = logging.FileHandler(log_file)\n",
     "        l.addHandler(fileHandler)\n",
     "        l.setLevel(logging.INFO)\n",
     "    \n",
     "    def activate_logger(self):\n",
+    "        \"\"\"Create a logger for status, failure, and RAM usage updates\"\"\"\n",
     "        self.create_logger('status', os.path.join(self.cluster_output_dir, \"status.log\"))\n",
     "        self.create_logger('failure', os.path.join(self.cluster_output_dir, \"failure.log\"))\n",
     "        self.create_logger('ram_usage', os.path.join(self.cluster_output_dir, \"ram_usage.log\"))\n",
@@ -114,10 +107,13 @@
     "        self.logger_ram_usage.propagate = False\n",
     "        \n",
     "    def profile_memory_for_cluster(self, cluster_id): # RAM in GB\n",
+    "        \"\"\"Given a cluster ID, determines how much RAM that cluster is using,\n",
+    "        which is just the sum of the RAM attached the CPUs in the cluster\"\"\"\n",
     "        return sum(psutil.Process(pid).memory_info().rss for \n",
     "                   pid in self.cluster_pid_dict[cluster_id]) / 1e9\n",
     "        \n",
     "    def profile_memory_for_all_clusters(self):\n",
+    "        \"\"\"Determines the RAM for all the clusters\"\"\"\n",
     "        self.cluster_RAM_use_dict.clear()\n",
     "        for jth_cluster in sorted(self.load_balanced_view_dict):\n",
     "            self.cluster_RAM_use_dict[jth_cluster] = self.profile_memory_for_cluster(jth_cluster)           \n",
@@ -127,10 +123,17 @@
     "                datetime.now(), sum(self.cluster_RAM_use_dict.values())))\n",
     "        \n",
     "    def clear_memory_on_cluster(self, cluster_id): # not as effective as imagined\n",
+    "        \"\"\"Ideally clears out the RAM when a cluster successfully processes a file.\n",
+    "        In practice, it is hard to say how effective this is in clearing the RAM.\n",
+    "        Fortunately, running this method is very fast\"\"\"\n",
     "        import gc\n",
     "        self.cluster_dict[cluster_id][:].apply_async(gc.collect)\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
+    "        \"\"\"Given a cluster ID, start the cluster with that ID and then attach\n",
+    "        to the cluster and then store the CPU PIDs cluster_pid_dict and then\n",
+    "        log it in the status.log file\n",
+    "        \"\"\"\n",
     "        self.logger_status.info(\"{}: \\tAttempting to start cluster job \"\n",
     "            \"{}'s {}th cluster with {} CPUs\".format(datetime.now(), \n",
     "            self.cluster_job_name, cluster_id, n_cpus))\n",
@@ -152,9 +155,9 @@
     "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "            \n",
     "    def start_all_clusters(self):\n",
+    "        \"\"\"Starts all the clusters specified and also writes updates to status.log\"\"\"\n",
     "        self.activate_logger()\n",
     "        self.logger_status.info('{}: Starting Multiple Cluster Engine'.format(datetime.now()))\n",
-    "        #self.logger_status.info('Attempting to start all clusters')\n",
     "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
     "            self.cluster_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
     "            self.load_balanced_view_dict[cluster_id] = self.cluster_dict[cluster_id].load_balanced_view()            \n",
@@ -162,12 +165,14 @@
     "        self.logger_status.info('{}: All clusters started at {}'.format(datetime.now(), self.start_time))\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        \n",
-    "    def kill_cluster(self, cluster_id): # use better arguments\n",
+    "    def kill_cluster(self, cluster_id):\n",
+    "        \"\"\"Given a cluster ID, kills that cluster and write update to status.log and\n",
+    "        update cluster_indexes to know which clusters are remaining\"\"\"\n",
     "        self.logger_status.info((\"{}: \\tAttempting to kill cluster job {}'s {}th \"\n",
     "            \"cluster with CPU processes: {}\").format(datetime.now(), \n",
     "            self.cluster_job_name, cluster_id, self.cluster_pid_dict[cluster_id]))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
-    "        # cluster.purge_everything() # sometimes takes forever\n",
+    "        # cluster.purge_everything() # sometimes this line takes forever\n",
     "        self.cluster_dict[cluster_id].close()\n",
     "        self.cluster_dict.pop(cluster_id)\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
@@ -176,6 +181,7 @@
     "        time.sleep(5) # hard-coded\n",
     "        \n",
     "    def kill_all_clusters(self):\n",
+    "        \"\"\"Kills all clusters that are remaining and writes updates to status.log\"\"\"\n",
     "        self.end_time = datetime.now()\n",
     "        n_surviving_clusters = len(self.cluster_dict)\n",
     "        self.logger_status.info('{}: Killing all remaining clusters'.format(datetime.now()))\n",
@@ -191,6 +197,9 @@
     "        logging.shutdown()\n",
     "        \n",
     "    def early_kill_cluster(self, cluster_id):\n",
+    "        \"\"\"Given a cluster ID, kills that cluster and writes which file that cluster\n",
+    "        was working on to failure.log and updates status and RAM logs. An early cluster\n",
+    "        kill happens when total RAM usage exceeds the limit set by the user\"\"\"\n",
     "        self.logger_failure.info((\"{}: Killing cluster job {}'s {}th cluster which \"\n",
     "            \"was processing file {} due to exceeding RAM limit\").format(\n",
     "            datetime.now(), self.cluster_job_name, cluster_id, \n",
@@ -207,7 +216,10 @@
     "        self.async_results_dict.pop(cluster_id)\n",
     "        self.n_unsuccessful_files += 1\n",
     "        \n",
-    "    def kill_cluster_if_ram_limit_exceeded(self): # only kills at max 1 cluster per method call\n",
+    "    def kill_cluster_if_ram_limit_exceeded(self): \n",
+    "        \"\"\"Checks if total RAM used exceeds limit set by user. If so, kill the \n",
+    "        cluster that uses the most RAM and update some logs. Only kills at \n",
+    "        max 1 cluster per method call\"\"\"\n",
     "        if sum(self.cluster_RAM_use_dict.values()) > self.ram_limit_in_GB:\n",
     "            cluster_id = sorted(self.cluster_RAM_use_dict, \n",
     "                                 key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n",
@@ -222,19 +234,27 @@
     "                \"(probably due to exceeding RAM limit)\").format(datetime.now()))\n",
     "            raise Exception('All clusters have been killed prematurely')\n",
     "    \n",
-    "    def check_if_function_in_cluster_failed(self, jth_cluster):\n",
-    "        if self.async_results_dict[jth_cluster] == []: # cluster just started, so it\n",
+    "    def check_if_function_in_cluster_failed(self, cluster_id):\n",
+    "        \"\"\"Given a cluster ID, checks if the most recent file (sent to\n",
+    "        that cluster) successfully processed or not. If there was an error\n",
+    "        in processing, then write the error to failure.log and remove\n",
+    "        its async_result history\"\"\"\n",
+    "        if self.async_results_dict[cluster_id] == []: # cluster just started, so it\n",
     "            return # doesn't have any files sent to the cluster yet\n",
     "        else:\n",
-    "            exception = self.async_results_dict[jth_cluster][-1].exception()\n",
+    "            exception = self.async_results_dict[cluster_id][-1].exception()\n",
     "            if exception:\n",
     "                self.logger_failure.info((\"{}: {}th cluster has error {} on \"\n",
-    "                    \"file {}\").format(datetime.now(), jth_cluster, exception.args[0], \n",
-    "                    self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
-    "                self.async_results_dict[jth_cluster].pop()\n",
+    "                    \"file {}\").format(datetime.now(), cluster_id, exception.args[0], \n",
+    "                    self.file_to_cluster_order_dict[cluster_id][-1]))\n",
+    "                self.async_results_dict[cluster_id].pop()\n",
     "                self.n_unsuccessful_files += 1\n",
     "\n",
     "    def create_kwargs_dict_list(self, input_file_name, cluster_id, n_cpus):\n",
+    "        \"\"\"Packages up the arguments into a dictionary to be sent to each cluster. \n",
+    "        There are function arguments as well as cluster arguments (cluster ID and \n",
+    "        number of CPUs in that cluster). If the cluster has n CPUs, then create\n",
+    "        a list of n copies of this kwargs dictionary\"\"\"\n",
     "        function_kwargs_dict = copy.deepcopy(self.function_kwargs_dict)\n",
     "        function_kwargs_dict.update({'input_file_name': input_file_name,\n",
     "                                    'cluster_output_dir': self.cluster_output_dir,\n",
@@ -247,25 +267,34 @@
     "        return function_kwargs_dict_list\n",
     "                \n",
     "    def run_clusters(self):\n",
-    "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
+    "        \"\"\"Iterates through all the files. You want to order your files from largest\n",
+    "        to smallest. The reason is that the largest files (file0, file1, file2, etc)\n",
+    "        will be sent to the largest cluster/cluster with the most CPUs (which \n",
+    "        we will your first cluster). For each file, create a kwargs dictionary to \n",
+    "        be sent to the cluster, write to status.log which file is going to which\n",
+    "        cluster, and store the async_result in async_results_dict. You can also\n",
+    "        inspect the order of files sent to which clusters by checking \n",
+    "        file_to_cluster_order_dict after the engine has finished processing\n",
+    "        all the files. For every wait_time_in_seconds, check if a cluster is\n",
+    "        finished processing its current file and available to send the next\n",
+    "        file. In addition, for every wait_time_in_seconds, check if RAM usage\n",
+    "        exceeds limit set by user. If so, kill the cluster using the most RAM\"\"\"\n",
+    "        small_file_ctr = 1 # effectively a dequeue scheme\n",
     "        big_file_ctr = 0\n",
-    "        \n",
     "        for ith_file in tqdm(range(len(self.input_file_names))):\n",
     "            while True:\n",
     "                time.sleep(self.wait_time_in_seconds)\n",
     "                self.profile_memory_for_all_clusters()\n",
     "                self.kill_cluster_if_ram_limit_exceeded()\n",
-    "                jth_cluster = next(self.cluster_indexes)\n",
-    "                \n",
+    "                jth_cluster = next(self.cluster_indexes)                \n",
     "                if (not self.async_results_dict[jth_cluster][-1:]\n",
-    "                    or self.async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
-    "                    self.clear_memory_on_cluster(jth_cluster)\n",
+    "                        or self.async_results_dict[jth_cluster][-1].done()): # check if cluster j is available                       \n",
+    "                        self.clear_memory_on_cluster(jth_cluster)\n",
     "                    self.check_if_function_in_cluster_failed(jth_cluster) # check if previous file failed to process\n",
-    "                    \n",
-    "                    if jth_cluster == 0: # Send large files to large cluster (ALWAYS has id == 0)\n",
+    "                    if jth_cluster == 0: # send large files to large cluster (which ALWAYS has id == 0)\n",
     "                        index = big_file_ctr\n",
     "                        big_file_ctr += 1\n",
-    "                    else: # Send small files to small clusters (ALWAYS have id > 0)\n",
+    "                    else: # send small files to small clusters (which ALWAYS have id > 0)\n",
     "                        index = -small_file_ctr\n",
     "                        small_file_ctr += 1\n",
     "                                                                                   \n",
@@ -299,6 +328,7 @@
     "        # async_results_dict; save to disk for later inspection? determine whether results takes too much RAM\n",
     "        \n",
     "    def main(self):\n",
+    "        \"\"\"Runs the entire thing\"\"\"\n",
     "        self.create_cluster_output_dir()\n",
     "        self.start_all_clusters()\n",
     "        self.run_clusters()\n",
@@ -324,6 +354,79 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple Cluster Engine Usage\n",
+    "Hello! Thank you for considering using the Multiple Cluster Engine.  \n",
+    "Here's when you WANT to use this engine:\n",
+    "* When you want to perform map-reduce on your data, which is constrained to 1 large machine (lots of RAM and CPUs) probably due to security concerns of migrating your data to other machines.  \n",
+    "\n",
+    "Do NOT use this engine:\n",
+    "* If you have access to traditional map-reduce (like AWS Elastic Map Reduce), then regular map-reduce is probably faster if you throw lots of machines at it. If you have the money, just use regular map-reduce.\n",
+    "* If you want to asychronously perform one task on lots of files that don't require map-reduce. For example, if you simply want to copy lots of big files from 1 directory to another asychronously at the same time, then just use the ipyparallel load balanced view. Basically you just want the multiprocessing module but don't want to write multiprocessing syntax because the multiprocessing module has some annoying limitations. Whatever you do using multiprocessing module can be done as easily or easier using ipyparallel. You can do something like this instead, which creates 1 cluster of 10 CPUs where each CPU does NOT talk to each other. :\n",
+    "```python\n",
+    "!ipcluster start --n=10 --profile=my_favorite_cluster --daemonize\n",
+    "client = ipp.Client('my_favorite_cluster')\n",
+    "load_balanced_view = client.load_balanced_view()\n",
+    "async_result = load_balanced_view.map_async(your_function_here, your_files_here, other_argument_here_if_you_have_any)\n",
+    "# with async_result, you can see how much time for each file has elapsed, whether if there was an\n",
+    "# error, and other interesting statistics. Basically async_result records the history of what the cluster is doing\n",
+    "!ipcluster stop --profile=my_favorite_cluster\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How the Multiple Cluster Engine Works\n",
+    "The Multiple Cluster Engine was used to extract features from large datasets on 1 machine. Here is the original paper describe how we approached the problem: https://docs.google.com/document/d/17-ItaCOXHbSqa2YmykpU4_PyC8--8bdMhEBGKjEURQo/edit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "equally distribute the RFCs, however some RFCs have a crazy amount of invoices (Santander bank creates ~13% of all invoices!) \n",
+    "practical advice to resolve this\n",
+    "# figure out queue vs deque; deque is better\n",
+    "# sorted from largest file to smallest, cluster for largest to smallestm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelled after MRJob, a library that makes map-reduce easier. https://github.com/donnemartin/data-science-ipython-notebooks/blob/master/mapreduce/mapreduce-python.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "great tutorial about ipyparallel at https://github.com/DaanVanHauwermeiren/ipyparallel-tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# explain what MCE does: map-reduce, vertical scaling instead of horizontal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -331,10 +434,7 @@
    },
    "outputs": [],
    "source": [
-    "# sorted from largest file to smallest, cluster for largest to smallest\n",
     "# if necessary, recreate engine here if cluster shut down\n",
-    "# figure out queue vs deque; deque is better\n",
-    "# # write a crap load of documentation\n",
     "# write shell script for configuration and installation"
    ]
   },
@@ -354,17 +454,6 @@
     "# during function failure: benefit (error type will be saved to failure.log) and weakness \n",
     "#     (it doesn't say what line code failed at so you have to debug your function outside \n",
     "#     of the MCE instance. You have to debug as if it were just calling the function by itself on some data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "https://github.com/donnemartin/data-science-ipython-notebooks/tree/master/mapreduce"
    ]
   }
  ],
