adding more documentation

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -381,8 +381,48 @@
    "metadata": {},
    "source": [
     "### How the Multiple Cluster Engine Works\n",
-    "The Multiple Cluster Engine was used to extract features from large datasets on 1 machine. Here is the original paper describe how we approached the problem: https://docs.google.com/document/d/17-ItaCOXHbSqa2YmykpU4_PyC8--8bdMhEBGKjEURQo/edit"
+    "The Multiple Cluster Engine allows vertical scaling on a large machine in place of horizontal scaling where you use multiple small machines. Here is the original paper called \"Multi-Cluster Engine: A Pragmatic Approach to Big Data\"  (https://docs.google.com/document/d/17-ItaCOXHbSqa2YmykpU4_PyC8--8bdMhEBGKjEURQo/edit), describing our approached of performing map-reduce to extract features from large datasets.  \n",
+    "Suppose we create a cluster with 7 CPUs (labeled CPU0, CPU1, ..., CPU6), each CPU will read all the data for 1 month. \n",
+    "* Mapping stage: For each line, each CPU hashes the user ID and performs mod 7 and determines if that user ID belongs to that CPU (meaning the remainder == CPU ID). Using this scheme, we can guarantee that for a specific user ID, all the invoice data for that month will go to only 1 CPU. For each CPU, the data it remembers will be stored in a defaultdict where the key is the user ID and the value is a list of invoice data. \n",
+    "* Reducing stage: create a pandas dataframe for only 1 user ID's data at a time and calculate the features you care about. After getting the results, store the results into a separate dictionary and immediately dump the raw data to reduce RAM usage. Once you iterate through all the user IDs, then save the results to file. You're done!\n",
+    "\n",
+    "1 cluster is working on 1 file at 1 time. The Multiple Cluster Engine abstracts this further where you create multiple clusters, so you can extract from multiple files files asychronously at the same time. The next file is sent to the next available cluster.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Practical Advice about the Multiple Cluster Engine\n",
+    "* You want to use SSD when you use this engine. The reason is HDD is significantly slower to read data, and it probably can't from different files simultaneously very well. Althought it may seem inefficient to have every CPU in 1 cluster read the same file independently, it turns out that map-reduce is not constrained by read time nor is it loading the data into RAM using the defaultdict. The bulk of the time is actually performing the calculations. If you are concerned about read time and performing unnecessary hashes on user ID, then you can write a Multiple Cluster job that first separates the data based on user ID and then write that to disk. Basically, you do a 1-time mapping step that forces all the data from a specific user ID to group into a file. \n",
+    "Hence, you can \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "You don't want more CPUs than actual CPUs. tradeoffs: CPUs, RAM, and storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# why use this engine, because it's check and faster than map-reduce due to no saving to disk, sort, shuffle, and load back to RAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -390,8 +430,8 @@
    "source": [
     "equally distribute the RFCs, however some RFCs have a crazy amount of invoices (Santander bank creates ~13% of all invoices!) \n",
     "practical advice to resolve this\n",
-    "# figure out queue vs deque; deque is better\n",
-    "# sorted from largest file to smallest, cluster for largest to smallestm"
+    "figure out queue vs deque; deque is better\n",
+    "sorted from largest file to smallest, cluster for largest to smallestm"
    ]
   },
   {
@@ -402,6 +442,22 @@
    "source": [
     "modelled after MRJob, a library that makes map-reduce easier. https://github.com/donnemartin/data-science-ipython-notebooks/blob/master/mapreduce/mapreduce-python.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre-hash all the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
