added lots of documentation

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -60,6 +60,7 @@
     "* Althought it may seem inefficient to have every CPU in 1 cluster read the same file independently, it turns out that map-reduce is not constrained by read time nor is it constrained by loading the data into RAM into the defaultdict. The bulk of the time is actually performing the calculations. If you are concerned about read time and performing unnecessary hashes on user ID, then you can write a Multiple Cluster job that first partitions the data based on user ID and then write that to disk. Basically, you do a 1-time map-reduce job where the mapping step collects all the data from a specific user ID and the reducing step is just writing each user ID data block back to file. The benefit is the data is now effectively already shuffled and sorted so you don't need to load in all the data any more. For future map-reduce jobs, you can just load in 1 user ID data block at a time, perform calculation, append to some results file, immediately delete the raw data from RAM, and repeat with next user ID. The tradeoff is that you use more SSD space, which is not cheap. Of course, a further optimization is writing to file how long the mapping (reading data) and reducing (performing calculations) steps take, so you know how many CPUs to put on a cluster. \n",
     "* The hashing of user ID is to randomly distribute user IDs to different CPUs. An interesting property is that the number of invoices for a user ID exhibits a power law distribution. Ideally, each CPU will have an equal amount of user IDs that have lots of invoices. The only downside is that there are a handful of user IDs that have incredible amounts of invoices: Santander bank has ~13% of all invoices. Hence, when a CPU is assigned to Santander bank, then it is the slowest CPU as it probably has to load more into its RAM during mapping and ultimately create a very large dataframe for reducing. Hence, in a cluster, you will see that this CPU slows down the entire cluster, as the cluster cannot move onto the next file until all the results for each user ID is completed for its input file. The wait time when other CPUs lay idle while 1 CPU is processing Santander is not trivial. In my opinion, this problem is the biggest thing that slows down the entire MCE job. Ideally you want for each CPU in a cluster to finish processing its user IDs around the same time. A resolution is to partition Santander and other known user IDs with inordinately large number of invoices from the rest of the dataset but __ONLY__ if the MCE job is too slow for you. Zen of Python: premature optimization is the root of all evil. \n",
     "* After the mapping step and before the reducing step, run gc.collect() to release some memory. It helps sometimes and is quick to run.\n",
+    "* The transition between Python 3 and 2 isn't very large: mostly print function vs statement. The main issue will be in the invoice data where the text are encoded with Window's encoding (cp-1252) (which had problems for reasons I forget), so we had to convert to UTF or ISO Latin 8859. Hence, for the function you put into MCE, you just have to be careful with Python 3's string encoding which will be UTF, which you'll have to figure out how to play nice with cp-1252. A practical example are Spanish characters with tildes or accents that, at least in Python 2, caused issues. (Perhaps, it was that cp-1252 strings were not hashable).  \n",
     "* From observation, it appears that you don't want to get too close to 100% RAM utilization as all operations take significantly longer. I am not sure why this is happening. My guess is try to keep RAM utilization peaked at 80%; just a guess. \n",
     "* You want to use SSD when you use this engine. The reason is HDD is significantly slower to read data, and it probably can't read from different files simultaneously very well. "
    ]
@@ -68,43 +69,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "usage"
+    "Cool Built-In Features:\n",
+    "* Profiles RAM for each cluster (and sums total to get total RAM for entire MCE) every ```wait_time_in_seconds``` and saves to ```ram_usage.log```. If RAM of all clusters exceed user's preset RAM limit, then MCE will automatically kill the cluster using the most RAM (in practice, probably cluster0) AND write to ```failure.log``` which cluster got killed and which file it was working on at the time. \n",
+    "* If the function put into MCE failed (like typeError, DivisionByZero, etc.), then that failure exception will be written into ```failure.log``` along with which cluster on which file. This is useful because the invoice data is frankly not always standardized--sometimes the delimiters change, sometimes the headers change, etc. Basically, the ```failure.log``` file tells you what went wrong on which file. However, to debug your function, you have to have to run the function without MCE but pass in arguments that MCE would have passed in, in order to reproduce the error as well as determine which line the code failed on. \n",
+    "* After setting up MCE, the main() method will create the final output directory, start all the clusters, run the clusters where files are sent to the clusters, and then killing all the clusters at the end. Ideally everything is self contained. Occasionally, if there is an error and MCE stops running, you have to go to ```htop``` and find if there are any cluster processes still alive and manually kill them using ```ipcluster stop --profile=cluster_name_here```\n",
+    "* Each time you run MCE, MCE will create a new final output directory. Hence, you can safely run the same code multiple times and not overwrite your previous output. \n",
+    "* Written and tested to be Python 3 and 2 compliant. In terms of RAM, Python 2 is a bit greedy in that it doesn't release all unused memory to the OS. The benefit for Python 3 is that it releases more (but not all) unused memory back to the OS. For example, if you create a large list in Python 2 and delete it, the amount of free RAM is lower than before. In Python 3 if you create a large list and delete it, the amount of free RAM is higher than that of Python 2. This is important in that when processing large files in MCE, each CPU will have some RAM attached after its finished processing its file, despite having no variables in its namespace. You want to have the smallest RAM footprint when each CPU finishes what its doing, so you can have more clusters. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-19af8c425ad8>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-19af8c425ad8>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Features:\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "Features:\n",
-    "RAM profiling\n",
-    "Python 3 and 2 compliant\n",
-    "Pthon 3 uses more RAM than 2. though gc is better."
+    "### Area for Future Improvements\n",
+    "* Allow queue instead of double-ended queue for input file lists. The motivation is that you actually want the results from some input files before others in a predictable way. This should be actually quite easy.\n",
+    "* Currently, if a cluster is running smoothly, it will never kill itself. Suppose RAM accumulates because of a memory leak, then implement a method to kill and restart the cluster. This should be easy. Personally, I don't know if memory leaks will be a big issue, so I didn't build this feature.\n",
+    "* If a cluster is killed, then perhaps in the future, turn that cluster back on--basically self-regenertion. This will be quite difficult for lots of reasons. For practical purposes, I do not see this as a feature, as there can be many things that can go wrong. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -120,6 +101,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write shell script for configuration and installation\n",
+    "# unittest with a mapper/reducer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,31 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "figure out queue vs deque\n",
-    "# if necessary, recreate engine here if cluster shut down\n",
-    "# write shell script for configuration and installation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# unittest with a mapper/reducer?\n",
-    "\n",
-    "# MCE works on files. Hence, if you don't have any datafiles, then just create some empty files\n",
-    "# SSD for parallel reading (not HDD); determine if you are IO constrained\n",
-    "# RAM usage is heavier in Python 3 than Python 2; though Python 3 memory management is better\n",
-    "# during function failure: benefit (error type will be saved to failure.log) and weakness \n",
-    "#     (it doesn't say what line code failed at so you have to debug your function outside \n",
-    "#     of the MCE instance. You have to debug as if it were just calling the function by itself on some data)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -494,6 +465,13 @@
     "        self.run_clusters()\n",
     "        self.kill_all_clusters()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
